# rtop

./: .gitignore  Cargo.toml  DOC.md  README.md  makefile
pkg/: config.yaml
src/: main.rs
src/cli/: args.rs
src/config/: mod.rs
src/system/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs
src/ui/: app.rs  layout.rs  mod.rs  theme.rs  widgets.rs
