[package]
name = "rtop"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust-based system monitoring tool inspired by top, htop, and btop"

[dependencies]
sysinfo = "0.29"
ratatui = "0.23"
crossterm = "0.27"
clap = { version = "4.3", features = ["derive"] }
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
dirs = "5.0"
